--- a/templates/vehicle/customerbase.html
+++ b/templates/vehicle/customerbase.html
@@ -59,18 +59,17 @@
                             </div>
                             <span>Profile</span>
                         </a>
+                    <li class="dropdown-menu-item">
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button autofocus type="submit" class="dropdown-menu-link" style="border:none; background-color: transparent">
+                                <div>
+                                    <i class="fas fa-sign-out-alt"></i>
+                                </div>
+                                Logout
+                            </button>
+                        </form>
                     </li>
-                    <a href="/logout" class="dropdown-menu-link">
-                    <form method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button type="submit" class="dropdown-menu-link">
-                            <div>
-                                <i class="fas fa-sign-out-alt"></i>
-                            </div>
-                            <span>Logout</span>
-                        </button>
-                    </form>
-                    </a>
                 </ul>
             </div>
         </li>
