--- a/templates/vehicle/mechanicbase.html
+++ b/templates/vehicle/mechanicbase.html
@@ -59,14 +59,17 @@
 							</a>
 						</li>
 
-						<li  class="dropdown-menu-item">
-							<a href="/logout" class="dropdown-menu-link">
-								<div>
-									<i class="fas fa-sign-out-alt"></i>
-								</div>
-								<span>Logout</span>
-							</a>
-						</li>
+						<li class="dropdown-menu-item">
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button autofocus type="submit" class="dropdown-menu-link" style="border:none; background-color: transparent">
+                                <div>
+                                    <i class="fas fa-sign-out-alt"></i>
+                                </div>
+                                Logout
+                            </button>
+                        </form>
+                    </li>
 					</ul>
 				</div>
 			</li>
