--- a/templates/vehicle/adminlogin.html
+++ b/templates/vehicle/adminlogin.html
@@ -13,7 +13,7 @@
 }
 
 .box {
-    width: 500px;
+    width: 560px;
     padding: 40px;
     position: absolute;
     top: 50%;
@@ -22,7 +22,8 @@
 
     text-align: center;
     transition: 0.25s;
-    margin-top: 100px
+    margin-top: 100px;
+    border-radius: 15px
 }
 
 .box input[type="text"],
