--- a/templates/vehicle/customer_mechanic_cards.html
+++ b/templates/vehicle/customer_mechanic_cards.html
@@ -12,6 +12,17 @@
       text-align: center;
       font-family: arial;
     }
+    .jumbotron {
+      margin-top: 200px;
+      margin-bottom: 200px;
+      background-image: url('{% static "images/car_pic.jpg" %}');
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    .jumbotron h1 {
+      text-align: center;
+    }
 
     .title {
       color: grey;
@@ -55,7 +66,9 @@
 
 <body>
 
+{#<div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">#}
 
+{#  </div>#}
 
   <div class="grid-container">
     <div class="grid-item">
@@ -74,8 +87,6 @@
         <p><button><a href="/mechanicsclick">View</a></button></p>
       </div>
     </div>
-
-
   </div>
 
 
