--- a/templates/vehicle/footer.html
+++ b/templates/vehicle/footer.html
@@ -12,8 +12,8 @@
    Social section
 -----------------------------------------*/
     footer {
-      padding: 0px 0px 0px 0px;
-      background-color: #4f55c7;
+      {#padding: 0px 0px 0px 0px;#}
+      background-color: transparent;
       margin: 0px;
     }
 
@@ -64,7 +64,7 @@
 
   <p>
     <a href="https://facebook.com/" class="fa fa-facebook"></a>
-    <a href="https://api.whatsapp.com/send?phone=919572181024&text=Hello%20Sumit.%0d%0aHow%20are%20you%20%3f%0d%0aI%20came%20from%20your%20website.&source=&data=#" class="fa fa-whatsapp"></a>
+    <a href="https://api.whatsapp.com/" class="fa fa-whatsapp"></a>
     <a href="https://instagram.com/" class="fa fa-instagram"></a>
     <a href="https://twitter.com/" class="fa fa-twitter"></a>
   </p>
@@ -75,7 +75,8 @@
       <div class="col-md-12 col-sm-12">
         <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
           <p><br>
-            Copyright &copy; 2021 Vehicle Service Management Systm. All Rights Reserved </p>
+            <a href="https://github.com/ivanmarinoff/service_website.git" target="_blank"> Copyright &copy; 2024
+                        ivanmarinoff</a></p> </p>
         </div>
       </div>
     </div>
