--- a/templates/vehicle/index.html
+++ b/templates/vehicle/index.html
@@ -8,7 +8,7 @@
     .jumbotron {
       margin-top: 0px;
       margin-bottom: 0px;
-      background-image: url('{% static "images/bg.jpg" %}');
+      background-image: url('{% static "images/car_pic.jpg" %}');
       background-size: cover;
       background-repeat: no-repeat;
     }
@@ -27,18 +27,20 @@
   <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   </div>
-  <marquee behavior="scroll" direction="left">
-   <img src="{% static "images/ferrari.png" %}" width="120" height="80" alt="ferrari" />
-    <img src="{% static "images/ford.png" %}" width="120" height="80" alt="ford" />
-   <img src="{% static "images/lambo.png" %}" width="120" height="80" alt="lambo" />
-   <img src="{% static "images/mahindra.png" %}" width="120" height="80" alt="mahindra" />
-   <img src="{% static "images/tvs.png" %}" width="120" height="80" alt="tvs" />
-   <img src="{% static "images/tata.png" %}" width="120" height="80" alt="tata" />
-   <img src="{% static "images/hero.png" %}" width="120" height="80" alt="hero" />
-   <img src="{% static "images/rolls.png" %}" width="120" height="80" alt="rolls" />
-   <img src="{% static "images/suzuki.png" %}" width="120" height="80" alt="suzuki" />
- </marquee>
-  <br><br>
+
+
+{#  <marquee behavior="scroll" direction="left">#}
+{#   <img src="{% static "images/ferrari.png" %}" width="120" height="80" alt="ferrari" />#}
+{#    <img src="{% static "images/ford.png" %}" width="120" height="80" alt="ford" />#}
+{#   <img src="{% static "images/lambo.png" %}" width="120" height="80" alt="lambo" />#}
+{#   <img src="{% static "images/mahindra.png" %}" width="120" height="80" alt="mahindra" />#}
+{#   <img src="{% static "images/tvs.png" %}" width="120" height="80" alt="tvs" />#}
+{#   <img src="{% static "images/tata.png" %}" width="120" height="80" alt="tata" />#}
+{#   <img src="{% static "images/hero.png" %}" width="120" height="80" alt="hero" />#}
+{#   <img src="{% static "images/rolls.png" %}" width="120" height="80" alt="rolls" />#}
+{#   <img src="{% static "images/suzuki.png" %}" width="120" height="80" alt="suzuki" />#}
+{# </marquee>#}
+{#  <br><br>#}
 
   {% include "vehicle/customer_mechanic_cards.html" %}
 <br><br><br><br><br>
