--- a/templates/vehicle/footer.html
+++ b/templates/vehicle/footer.html
@@ -12,9 +12,10 @@
    Social section
 -----------------------------------------*/
     footer {
+        display: inherit;
       {#padding: 0px 0px 0px 0px;#}
-      background-color: transparent;
-      margin: 0px;
+      {#background-color: transparent;#}
+      {#margin: 0px;#}
     }
 
     .fa {
