--- a/templates/vehicle/index.html
+++ b/templates/vehicle/index.html
@@ -24,8 +24,11 @@
   {% include "vehicle/navbar.html" %}
   <br><br>
 
-  <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <div class="jumbotron" style="margin-bottom: -200px;margin-top: 4px;">
+      <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+{#<br><br><br><br><br><br><br><br><br>#}
+{#<br><br><br><br><br><br><br><br><br>#}
+{#<br><br><br><br><br><br><br><br><br><br>#}
   </div>
 
 
@@ -43,8 +46,8 @@
 {#  <br><br>#}
 
   {% include "vehicle/customer_mechanic_cards.html" %}
-<br><br><br><br><br>
-  {% include "vehicle/footer.html" %}
+<br><br><br><br>
+ {% include "vehicle/footer.html" %}
 </body>
 
 </html>
