--- a/templates/vehicle/customer_mechanic_cards.html
+++ b/templates/vehicle/customer_mechanic_cards.html
@@ -3,38 +3,62 @@
 <html>
 
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
 {#  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
   <style>
+      :root {
+  --clr-neon: hsl(317 100% 54%);
+  --clr-bg: hsl(323 21% 16%);
+}
     .card {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      {#box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);#}
       max-width: 300px;
       margin: auto;
       text-align: center;
-      font-family: arial;
+      {#font-family: arial;#}
+        background: var(--clr-neon);
+  font-family: "Balsamiq Sans", cursive;
+  color: var(--clr-neon);
+        border: var(--clr-neon) 0.125em solid;
+        border-radius: 0.25em;
+        text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+
+  box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
     }
 
 
     .title {
-      color: grey;
+      color: #000;
       font-size: 18px;
     }
 
     button {
-      border: none;
+      {#border: none;#}
+
       outline: 0;
       display: inline-block;
       padding: 8px;
-      color: white;
-      background-color: #000;
+      {#color: white;#}
+        color: var(--clr-neon);
+      {#background-color: #000;#}
+        background: var(--clr-bg);
       text-align: center;
       cursor: pointer;
       width: 100%;
       font-size: 18px;
+        border-radius: 0.25em;
+        text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+
+  box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+        position: relative;
     }
 
     button:hover,
     a:hover {
-      opacity: 0.7;
+      {#opacity: 0.7;#}
+        color: var(--clr-bg);
+  text-shadow: none;
     }
 
     .grid-container {
@@ -49,7 +73,8 @@
     }
 
     a {
-      color: white;
+      {#color: white;#}
+        color: var(--clr-neon);
     }
   </style>
 </head>
