--- a/templates/vehicle/index.html
+++ b/templates/vehicle/index.html
@@ -26,10 +26,8 @@
 
   <div class="jumbotron" style="margin-bottom: -200px;margin-top: 4px;">
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-{#<br><br><br><br><br><br><br><br><br>#}
-{#<br><br><br><br><br><br><br><br><br>#}
-{#<br><br><br><br><br><br><br><br><br><br>#}
   </div>
+
 
 
 {#  <marquee behavior="scroll" direction="left">#}
@@ -47,7 +45,8 @@
 
   {% include "vehicle/customer_mechanic_cards.html" %}
 <br><br><br><br>
- {% include "vehicle/footer.html" %}
-</body>
+  </div>
 
+</body>
+{% include "vehicle/footer.html" %}
 </html>
