--- a/templates/vehicle/navbar.html
+++ b/templates/vehicle/navbar.html
@@ -37,7 +37,7 @@
             font-size: 35px;
             font-family: "Balsamiq Sans", cursive;
             text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
-            padding: 4%;
+            padding: 0 0 0 0;
         }
 
         button {
@@ -65,15 +65,11 @@
 
         a:link {
             text-decoration: none;
+            padding: 10px;
         }
 
         a {
          color: var(--clr-neon);
-        }
-
-        .bs-example {
-            margin: 0px;
-
         }
 
         .bg-color {
@@ -93,7 +89,7 @@
 
 
 <div class="navbar-brand">
-    <nav class="navbar navbar-expand-md navbar-danger bg-color bs-example fixed-top">
+    <nav class="navbar navbar-expand-md navbar-danger bg-color fixed-top">
         <a href="/" class="title">Vehicle Service Management</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
