Updated all views

--- a/templates/vehicle/customerclick.html
+++ b/templates/vehicle/customerclick.html
@@ -24,7 +24,7 @@
 
 
   <br><br>
-  <div class="jumbotron" style="margin-bottom:0px;">
+  <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     <h1 class="display-4">Hello</h1>
     <p class="lead">Welcome to Vehicle Service Management</p>
     <hr class="my-4">
@@ -34,6 +34,7 @@
       <a class="btn btn-primary btn-lg" href="customerlogin" role="button">Login</a>
     </p>
   </div>
+  <br><br><br><br>
   {% include "vehicle/footer.html" %}
 </body>
 
