--- a/templates/vehicle/footer.html
+++ b/templates/vehicle/footer.html
@@ -13,15 +13,15 @@
 -----------------------------------------*/
     footer {
         display: inherit;
-      {#padding: 0px 0px 0px 0px;#}
-      {#background-color: transparent;#}
-      {#margin: 0px;#}
+      padding: 0px 0px 0px 0px;
+      background-color: transparent;
+      margin: 0px;
     }
 
     .fa {
       padding: 20px;
-      font-size: 23px;
-      width: 60px;
+      font-size: 20px;
+      width: 40px;
       text-align: center;
       text-decoration: none;
       margin: 5px 2px;
