--- a/templates/vehicle/index.html
+++ b/templates/vehicle/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <style media="screen">
     .jumbotron {
       margin-top: 0px;
@@ -27,21 +28,6 @@
   <div class="jumbotron" style="margin-bottom: -200px;margin-top: 4px;">
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
   </div>
-
-
-
-{#  <marquee behavior="scroll" direction="left">#}
-{#   <img src="{% static "images/ferrari.png" %}" width="120" height="80" alt="ferrari" />#}
-{#    <img src="{% static "images/ford.png" %}" width="120" height="80" alt="ford" />#}
-{#   <img src="{% static "images/lambo.png" %}" width="120" height="80" alt="lambo" />#}
-{#   <img src="{% static "images/mahindra.png" %}" width="120" height="80" alt="mahindra" />#}
-{#   <img src="{% static "images/tvs.png" %}" width="120" height="80" alt="tvs" />#}
-{#   <img src="{% static "images/tata.png" %}" width="120" height="80" alt="tata" />#}
-{#   <img src="{% static "images/hero.png" %}" width="120" height="80" alt="hero" />#}
-{#   <img src="{% static "images/rolls.png" %}" width="120" height="80" alt="rolls" />#}
-{#   <img src="{% static "images/suzuki.png" %}" width="120" height="80" alt="suzuki" />#}
-{# </marquee>#}
-{#  <br><br>#}
 
   {% include "vehicle/customer_mechanic_cards.html" %}
 <br><br><br><br>
