--- a/templates/vehicle/customer_mechanic_cards.html
+++ b/templates/vehicle/customer_mechanic_cards.html
@@ -8,11 +8,11 @@
 {#  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
   <style>
       :root {
-  --clr-neon: hsl(317 100% 54%);
+  --clr-neon: hsl(100 63% 49%);
   --clr-bg: hsl(323 21% 16%);
 }
     .card {
-      {#box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);#}
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       max-width: 300px;
       margin: auto;
       text-align: center;
