--- a/templates/vehicle/feedback_sent.html
+++ b/templates/vehicle/feedback_sent.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/mechanicbase.html' %}
+{% extends 'vehicle/../mechanic/mechanicbase.html' %}
 {% load static %}
 
 {% block content %}
