--- a/templates/vehicle/feedback_sent_by_customer.html
+++ b/templates/vehicle/feedback_sent_by_customer.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/customerbase.html' %}
+{% extends 'vehicle/../customer/customerbase.html' %}
 {% load static %}
 
 {% block content %}
