--- a/templates/vehicle/index.html
+++ b/templates/vehicle/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <style media="screen">
     .jumbotron {
@@ -29,7 +30,7 @@
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
   </div>
 
-  {% include "vehicle/customer_mechanic_cards.html" %}
+  {% include "vehicle/../customer/customer_mechanic_cards.html" %}
 <br><br><br><br>
   </div>
 
