--- a/templates/customer/customer_add_request.html
+++ b/templates/customer/customer_add_request.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/customerbase.html' %}
+{% extends 'customer/customerbase.html' %}
 {% load widget_tweaks %}
 {% block content %}
 <head>
