--- a/templates/vehicle/navbar.html
+++ b/templates/vehicle/navbar.html
@@ -16,7 +16,7 @@
 
         .title {
             color: #000;
-            font-size: 15px;
+            font-size: 20px;
             font-family: "Balsamiq Sans", cursive;
             text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
             padding: 0 0 0 0;
@@ -59,10 +59,10 @@
         }
 
         .navbar-brand {
-            font-size: 20px;
+            font-size: 25px;
             font-family: "Balsamiq Sans", cursive;
             text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
-
+            padding: 0 0 0 0;
         }
     </style>
 </head>
@@ -79,13 +79,13 @@
 
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-brand">
-                <a href="/" class="title">Home</a>
-
-                <a href="/customerclick" class="title">Customer</a>
-                <a href="/mechanicsclick" class="title">Mechanics</a>
-                <a href="/adminclick" class="title">Admin</a>
-
-
+{#                <a href="/" class="title">Home</a>#}
+{##}
+{#                <a href="/customerclick" class="title">Customer</a>#}
+{#                <a href="/mechanicsclick" class="title">Mechanics</a>#}
+{#                <a href="/adminclick" class="title">Admin</a>#}
+{##}
+{##}
             </div>
 
             <div class="navbar-nav">
