--- a/templates/admin/admin_view_mechanic_salary.html
+++ b/templates/admin/admin_view_mechanic_salary.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/adminbase.html' %}
+{% extends 'admin/adminbase.html' %}
 {% block content %}
 {% load static %}
 	<!-- main content -->
