--- a/templates/customer/customer_mechanic_cards.html
+++ b/templates/customer/customer_mechanic_cards.html
@@ -4,79 +4,73 @@
 
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
-{#  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
-  <style>
-      :root {
-  --clr-neon: hsl(100 63% 49%);
-  --clr-bg: hsl(323 21% 16%);
-}
-    .card {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      max-width: 300px;
-      margin: auto;
-      text-align: center;
-      {#font-family: arial;#}
-        background: var(--clr-neon);
-  font-family: "Balsamiq Sans", cursive;
-  color: var(--clr-neon);
-        border: var(--clr-neon) 0.125em solid;
-        border-radius: 0.25em;
-        text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+    {#  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
+    <style>
+        :root {
+            --clr-neon: hsl(100 63% 49%);
+            --clr-bg: hsl(323 21% 16%);
+        }
 
-  box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
-    }
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            max-width: 300px;
+            margin: auto;
+            text-align: center;
+        {#font-family: arial;#} background: var(--clr-neon);
+            font-family: "Balsamiq Sans", cursive;
+            color: var(--clr-neon);
+            border: var(--clr-neon) 0.125em solid;
+            border-radius: 0.25em;
+            text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+
+            box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+        }
 
 
-    .title {
-      color: #000;
-      font-size: 18px;
-    }
+        .title {
+            color: #000;
+            font-size: 18px;
+        }
 
-    button {
-      {#border: none;#}
+        button {
+        {#border: none;#} outline: 0;
+            display: inline-block;
+            padding: 8px;
+        {#color: white;#} color: var(--clr-neon);
+        {#background-color: #000;#} background: var(--clr-bg);
+            text-align: center;
+            cursor: pointer;
+            width: 100%;
+            font-size: 18px;
+            border-radius: 0.25em;
+            text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
 
-      outline: 0;
-      display: inline-block;
-      padding: 8px;
-      {#color: white;#}
-        color: var(--clr-neon);
-      {#background-color: #000;#}
-        background: var(--clr-bg);
-      text-align: center;
-      cursor: pointer;
-      width: 100%;
-      font-size: 18px;
-        border-radius: 0.25em;
-        text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+            box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+            position: relative;
+        }
 
-  box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
-        position: relative;
-    }
+        button:hover,
+        a:hover {
+        {#opacity: 0.7;#} color: var(--clr-bg);
+            text-shadow: none;
+        }
 
-    button:hover,
-    a:hover {
-      {#opacity: 0.7;#}
-        color: var(--clr-bg);
-  text-shadow: none;
-    }
+        .grid-container {
+            display: grid;
+            grid-template-columns: min-content;
+            padding: 60px;
+            margin-left: 0px;
+        }
 
-    .grid-container {
-      display: grid;
-      grid-template-columns: min-content;
-      padding: 60px;
-      margin-left:0px;
-    }
+        a:link {
+            text-decoration: none;
+        }
 
-    a:link {
-      text-decoration: none;
-    }
-
-    a {
-      {#color: white;#}
-        color: var(--clr-neon);
-    }
-  </style>
+        a {
+        {#color: white;#} color: var(--clr-neon);
+        }
+    </style>
 </head>
 
 <body>
@@ -84,26 +78,39 @@
 {#<div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">#}
 
 {#  </div>#}
-
-  <div class="grid-container">
+<div class="grid-container">
     <div class="grid-item">
-      <div class="card">
-        <img src="{% static "images/admin.png" %}" alt="John" style="width:100%">
-        <p class="title">Customer</p>
-        <p><button><a href="/customerclick">View</a></button></p>
-      </div>
-
+        <div class="card">
+            <img src="{% static "images/admin.png" %}" alt="John" style="width:100%">
+            <p class="title">Customer</p>
+            <p>
+                <button><a href="/customerclick">View</a></button>
+            </p>
+        </div>
     </div>
-      <br>
+    <br>
     <div class="grid-item">
-      <div class="card">
-        <img src="{% static "images/mechanic.png" %}" alt="John" style="width:100%">
-        <p class="title">Mechanic</p>
-        <p><button><a href="/mechanicsclick">View</a></button></p>
-      </div>
+        <div class="card">
+            <img src="{% static "images/mechanic.png" %}" alt="John" style="width:100%">
+            <p class="title">Mechanic</p>
+            <p>
+                <button><a href="/mechanicsclick">View</a></button>
+            </p>
+        </div>
+        <br>
+            <div class="grid-item">
+                <div class="card">
+                    <img src="{% static "images/admin.png" %}" alt="John" style="width:100%">
+                    <p class="title">Admin</p>
+                    <p>
+                        <button><a href="/adminclick">View</a></button>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
+</div>
 
 </body>
 
