--- a/templates/customer/customer_profile.html
+++ b/templates/customer/customer_profile.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/customerbase.html' %}
+{% extends 'customer/customerbase.html' %}
 {% load static %}
 {% block content %}
 <head>
