--- a/templates/customer/customer_view_request.html
+++ b/templates/customer/customer_view_request.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/customerbase.html' %}
+{% extends 'customer/customerbase.html' %}
 {% block content %}
 
 	<!-- main content -->
