--- a/templates/mechanic/mechanic_profile.html
+++ b/templates/mechanic/mechanic_profile.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/mechanicbase.html' %}
+{% extends 'mechanic/mechanicbase.html' %}
 {% load static %}
 {% block content %}
 <head>
