--- a/templates/mechanic/mechanic_view_attendance.html
+++ b/templates/mechanic/mechanic_view_attendance.html
@@ -1,4 +1,4 @@
-{% extends 'vehicle/mechanicbase.html' %}
+{% extends 'mechanic/mechanicbase.html' %}
 {% block content %}
 {% load static %}
 	<!-- main content -->
