--- a/templates/customer/customerclick.html
+++ b/templates/customer/customerclick.html
@@ -33,9 +33,8 @@
       <a class="btn btn-primary btn-lg" href="customersignup" role="button">Create Your Account</a>
       <a class="btn btn-primary btn-lg" href="customerlogin" role="button">Login</a>
     </p>
-  </div>
-  <br><br><br><br>
-  {% include "vehicle/footer.html" %}
-</body>
 
+  <br><br><br><br>
+  {% include "vehicle/footer.html" %}</div>
+</body>
 </html>
