--- a/templates/vehicle/footer.html
+++ b/templates/vehicle/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+
 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -59,29 +59,15 @@
 
     }
   </style>
-</head>
 
-<footer>
 
+
+<div>
   <p>
     <a href="https://facebook.com/" class="fa fa-facebook"></a>
     <a href="https://api.whatsapp.com/" class="fa fa-whatsapp"></a>
     <a href="https://instagram.com/" class="fa fa-instagram"></a>
     <a href="https://twitter.com/" class="fa fa-twitter"></a>
-  </p>
-
-  <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 col-sm-12">
-        <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
-          <p><br>
-            <a href="https://github.com/ivanmarinoff/service_website.git" target="_blank"> Copyright &copy; 2024
-                        ivanmarinoff</a></p> </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
+  </p><p><a href="https://github.com/ivanmarinoff/service_website.git" target="_blank"> Copyright &copy; 2024
+                        ivanmarinoff</a></p></div>
 </html>
