--- a/templates/vehicle/index.html
+++ b/templates/vehicle/index.html
@@ -4,12 +4,12 @@
 
 <head>
   <meta charset="utf-8">
-    <link rel="icon" type="image/x-icon" href="{% static "images/favicon.ico"%}">
+    <link rel="icon" type="image/x-icon" href="{% static "images/favicon.ico" %}">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <style media="screen">
     .jumbotron {
-      margin-top: 0px;
-      margin-bottom: 0px;
+      margin-top: 0;
+      margin-bottom: 0;
       background-image: url('{% static "images/car_pic.jpg" %}');
       background-size: cover;
       background-repeat: no-repeat;
