--- a/templates/vehicle/aboutus.html
+++ b/templates/vehicle/aboutus.html
@@ -39,19 +39,23 @@
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/" role="button">HOME</a>
     </p>
-  </div>
-  <marquee behavior="scroll" direction="left">
-   <img src="{% static "images/ferrari.png" %}" width="120" height="80" alt="ferrari" />
-    <img src="{% static "images/ford.png" %}" width="120" height="80" alt="ford" />
-   <img src="{% static "images/lambo.png" %}" width="120" height="80" alt="lambo" />
-   <img src="{% static "images/mahindra.png" %}" width="120" height="80" alt="mahindra" />
-   <img src="{% static "images/tvs.png" %}" width="120" height="80" alt="tvs" />
-   <img src="{% static "images/tata.png" %}" width="120" height="80" alt="tata" />
-   <img src="{% static "images/hero.png" %}" width="120" height="80" alt="hero" />
-   <img src="{% static "images/rolls.png" %}" width="120" height="80" alt="rolls" />
-   <img src="{% static "images/suzuki.png" %}" width="120" height="80" alt="suzuki" />
- </marquee>
   {% include "vehicle/footer.html" %}
+  </div>
+  <br><br><br>
+  <marquee behavior="scroll" direction="left">
+   <img src="{% static "images/ferrari.png" %}" width="120" height="80" alt="ferrari"/>
+    <img src="{% static "images/porsche.png" %}" width="120" height="80" alt="porsche"/>
+    <img src="{% static "images/lambo.png" %}" width="120" height="80" alt="lambo"/>
+    <img src="{% static "images/bentley.png" %}" width="120" height="80" alt="bentley"/>
+    <img src="{% static "images/rolls.png" %}" width="120" height="80" alt="rolls"/>
+    <img src="{% static "images/audi.png" %}" width="120" height="80" alt="audi"/>
+    <img src="{% static "images/honda.png" %}" width="120" height="80" alt="honda"/>
+    <img src="{% static "images/mercedes.png" %}" width="120" height="80" alt="mercedes"/>
+    <img src="{% static "images/nissan.png" %}" width="120" height="80" alt="nissan"/>
+    <img src="{% static "images/ford.png" %}" width="120" height="80" alt="ford"/>
+    <img src="{% static "images/fiat.png" %}" width="120" height="80" alt="fiat"/>
+    <img src="{% static "images/suzuki.png" %}" width="120" height="80" alt="suzuki"/>
+ </marquee>
 </body>
 
 </html>
