--- a/static/fontawesome-free/css/fontawesome.css
+++ b/static/fontawesome-free/css/fontawesome.css
@@ -2110,10 +2110,10 @@ readers do not read off random characters that represent icons */
   content: "\f292"; }
 
 .fa-hat-cowboy:before {
-  content: "\f8c0"; }
+  content: "\f0ad"; }
 
 .fa-hat-cowboy-side:before {
-  content: "\f8c1"; }
+  content: "\f0ad"; }
 
 .fa-hat-wizard:before {
   content: "\f6e8"; }
