--- a/templates/mechanic/mechanic_dashboard.html
+++ b/templates/mechanic/mechanic_dashboard.html
@@ -2,65 +2,69 @@
 {% load static %}
 {% block content %}
 
-	<!-- main content -->
-	<div class="wrapper">
+    <!-- main content -->
+    <div class="wrapper">
 
-<!-- ****** cards start ********** -->
-		<div class="row">
-			<div class="col-3 col-m-6 col-sm-6">
-				<div class="counter bg-primary">
-					<p>
-						<i class="fas fa-tasks"></i>
-					</p>
-					<h3>{{new_work_assigned}}</h3>
-					<p>New Work Assigned</p>
-				</div>
-			</div>
-			<div class="col-3 col-m-6 col-sm-6">
-				<div class="counter bg-warning">
-					<p>
-						<i class="fas fa-spinner"></i>
-					</p>
-					<h3>{{work_in_progress}}</h3>
-					<p>Work In Progress</p>
-				</div>
-			</div>
-			<div class="col-3 col-m-6 col-sm-6">
-				<div class="counter bg-success">
-					<p>
-						<i class="fas fa-check-circle"></i>
-					</p>
-					<h3>{{work_completed}}</h3>
-					<p>Work Completed</p>
-				</div>
-			</div>
-			<div class="col-3 col-m-6 col-sm-6">
-				<div class="counter bg-danger">
-					<p>
-						<i class="fas fa-rupee-sign"></i>
-					</p>
-					<h3>{{salary}}</h3>
-					<p>Salary</p>
-				</div>
-			</div>
-		</div><br><br><br><br>
-		<marquee behavior="scroll" direction="left">
-		 <img src="{% static "images/ferrari.png" %}" width="120" height="80" alt="ferrari" />
-			<img src="{% static "images/ford.png" %}" width="120" height="80" alt="ford" />
-		 <img src="{% static "images/lambo.png" %}" width="120" height="80" alt="lambo" />
-		 <img src="{% static "images/mahindra.png" %}" width="120" height="80" alt="mahindra" />
-		 <img src="{% static "images/tvs.png" %}" width="120" height="80" alt="tvs" />
-		 <img src="{% static "images/tata.png" %}" width="120" height="80" alt="tata" />
-		 <img src="{% static "images/hero.png" %}" width="120" height="80" alt="hero" />
-		 <img src="{% static "images/rolls.png" %}" width="120" height="80" alt="rolls" />
-		 <img src="{% static "images/suzuki.png" %}" width="120" height="80" alt="suzuki" />
-	 </marquee>
-	 <br><br><br><br><br><br><br><br><br><br><br><br>
-		</div>
+        <!-- ****** cards start ********** -->
+        <div class="row">
+            <div class="col-3 col-m-6 col-sm-6">
+                <div class="counter bg-primary">
+                    <p>
+                        <i class="fas fa-tasks"></i>
+                    </p>
+                    <h3>{{ new_work_assigned }}</h3>
+                    <p>New Work Assigned</p>
+                </div>
+            </div>
+            <div class="col-3 col-m-6 col-sm-6">
+                <div class="counter bg-warning">
+                    <p>
+                        <i class="fas fa-spinner"></i>
+                    </p>
+                    <h3>{{ work_in_progress }}</h3>
+                    <p>Work In Progress</p>
+                </div>
+            </div>
+            <div class="col-3 col-m-6 col-sm-6">
+                <div class="counter bg-success">
+                    <p>
+                        <i class="fas fa-check-circle"></i>
+                    </p>
+                    <h3>{{ work_completed }}</h3>
+                    <p>Work Completed</p>
+                </div>
+            </div>
+            <div class="col-3 col-m-6 col-sm-6">
+                <div class="counter bg-danger">
+                    <p>
+                        <i class="fas fa-rupee-sign"></i>
+                    </p>
+                    <h3>{{ salary }}</h3>
+                    <p>Salary</p>
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
+        <marquee behavior="scroll" direction="left">
+            <img src="{% static "images/ferrari.png" %}" width="120" height="80" alt="ferrari"/>
+            <img src="{% static "images/porsche.png" %}" width="120" height="80" alt="porsche"/>
+            <img src="{% static "images/lambo.png" %}" width="120" height="80" alt="lambo"/>
+            <img src="{% static "images/bentley.png" %}" width="120" height="80" alt="bentley"/>
+            <img src="{% static "images/rolls.png" %}" width="120" height="80" alt="rolls"/>
+            <img src="{% static "images/audi.png" %}" width="120" height="80" alt="audi"/>
+            <img src="{% static "images/honda.png" %}" width="120" height="80" alt="honda"/>
+            <img src="{% static "images/mercedes.png" %}" width="120" height="80" alt="mercedes"/>
+            <img src="{% static "images/nissan.png" %}" width="120" height="80" alt="nissan"/>
+            <img src="{% static "images/ford.png" %}" width="120" height="80" alt="ford"/>
+            <img src="{% static "images/fiat.png" %}" width="120" height="80" alt="fiat"/>
+            <img src="{% static "images/suzuki.png" %}" width="120" height="80" alt="suzuki"/>
+        </marquee>
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
 
 
-<!-- ****** cards end ********** -->
+    <!-- ****** cards end ********** -->
 
 
-	<!-- end main content -->
+    <!-- end main content -->
 {% endblock content %}
