--- a/templates/mechanic/mechanic_profile.html
+++ b/templates/mechanic/mechanic_profile.html
@@ -67,7 +67,7 @@
 
 <br><br><br><br><br>
 <div class="center">
-  <img style="width:200px; height:200px; margin-left:200px;" src="{%static mechanic.profile_pic.url%}" alt="">
+  <img style="width:200px; height:200px; margin-left:200px;" src="{%static mechanic.profile_pic%}" alt="">
   <div class="w3-panel w3-blue">
     <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Name : {{mechanic}}</b></h3>
     <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Mobile : {{mechanic.mobile}}</b></h3>
