--- a/templates/mechanic/mechanicbase.html
+++ b/templates/mechanic/mechanicbase.html
@@ -47,7 +47,7 @@
 
 			<li class="nav-item avt-wrapper">
 				<div class="avt dropdown">
-					<img src="{% static mechanic.profile_pic.url %} " alt="User image" class="dropdown-toggle" data-toggle="user-menu">
+					<img src="{% static mechanic.profile_pic %} " alt="User image" class="dropdown-toggle" data-toggle="user-menu">
 					<ul id="user-menu" class="dropdown-menu">
 
 						<li  class="dropdown-menu-item">
