--- a/templates/customer/customer_profile.html
+++ b/templates/customer/customer_profile.html
@@ -1,84 +1,88 @@
 {% extends 'customer/customerbase.html' %}
 {% load static %}
 {% block content %}
-<head>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <style media="screen">
-    img{
-    border-radius: 50%;
-  }
-  .center {
-    margin: auto;
-    width: 60%;
-  }
-  .button {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #f4511e;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-}
+    <head>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <style media="screen">
+            img {
+                border-radius: 50%;
+            }
 
-.button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
+            .center {
+                margin: auto;
+                width: 60%;
+            }
 
-.button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
+            .button {
+                display: inline-block;
+                border-radius: 4px;
+                background-color: #f4511e;
+                border: none;
+                color: #FFFFFF;
+                text-align: center;
+                font-size: 28px;
+                padding: 20px;
+                width: 200px;
+                transition: all 0.5s;
+                cursor: pointer;
+                margin: 5px;
+            }
 
-.button:hover span {
-  padding-right: 25px;
-}
+            .button span {
+                cursor: pointer;
+                display: inline-block;
+                position: relative;
+                transition: 0.5s;
+            }
 
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
+            .button span:after {
+                content: '\00bb';
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: -20px;
+                transition: 0.5s;
+            }
 
-.button2 {
-  background-color: white;
-  color: black;
-  border: 2px solid #008CBA;
-}
+            .button:hover span {
+                padding-right: 25px;
+            }
 
-.button2:hover {
-  background-color: #008CBA;
-  color: white;
-}
+            .button:hover span:after {
+                opacity: 1;
+                right: 0;
+            }
 
-  </style>
-</head>
+            .button2 {
+                background-color: white;
+                color: black;
+                border: 2px solid #008CBA;
+            }
 
-<br><br><br><br><br>
-<div class="center">
-  <img style="width:200px; height:200px; margin-left:200px;" src="{%static customer.profile_pic.url%}" alt="">
-  <div class="w3-panel w3-blue">
-    <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Name : {{customer}}</b></h3>
-    <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Mobile : {{customer.mobile}}</b></h3>
+            .button2:hover {
+                background-color: #008CBA;
+                color: white;
+            }
 
-    <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Address : {{customer.address}}</b></h3>
-  </div>
-</div>
+        </style>
+    </head>
 
-<div style="text-align: center;">
-  <a href="/edit-customer-profile"><button class="button" ><span>Edit Profile </span></button></a>
-</div>
+    <br><br><br><br><br>
+    <div class="center" style="text-align: center;">
+        <img style="width:200px; height:200px;" src="{% static customer.profile_pic %}" alt="">
+        <div class="w3-panel w3-blue">
+            <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Name : {{ customer }}</b></h3>
+            <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Mobile : {{ customer.mobile }}</b></h3>
+            <h3 class="w3-text-orange" style="text-shadow:1px 1px 0 #444"><b>Address : {{ customer.address }}</b></h3>
+        </div>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+
+    <div style="text-align: center;">
+        <a href="/edit-customer-profile">
+            <button class="button"><span>Edit Profile </span></button>
+        </a>
+    </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 {% endblock content %}
