--- a/templates/customer/customerlogin.html
+++ b/templates/customer/customerlogin.html
@@ -81,7 +81,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="card">
-                <form class="box" method="post">
+                <form class="box" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <h1>Customer Login</h1>
                     <p class="text-muted"> Please enter your login and password!</p>
