--- a/templates/admin/adminlogin.html
+++ b/templates/admin/adminlogin.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 {% load widget_tweaks %}
 <html lang="en" dir="ltr">
   <head>
+      <link rel="icon" type="image/x-icon" href="{% static "images/favicon.ico" %}">
     <meta charset="utf-8">
     <title></title>
     <style media="screen">
