--- a/templates/customer/customer_mechanic_cards.html
+++ b/templates/customer/customer_mechanic_cards.html
@@ -8,7 +8,8 @@
     {#  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
     <style>
         :root {
-            --clr-neon: hsl(100 63% 49%);
+            --clr-neon: hsl(220, 57%, 82%);
+            {#--clr-neon: hsl(100 63% 49%);#}
             --clr-bg: hsl(323 21% 16%);
         }
 
