--- a/templates/vehicle/navbar.html
+++ b/templates/vehicle/navbar.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --clr-neon: hsl(100 63% 49%);
+            --clr-neon: hsl(220 57% 82%);
+            {#--clr-neon: hsl(100 63% 49%);#}
             --clr-bg: hsl(323 21% 16%);
         }
 
